Fix recent recordings overflow

--- a/source/less/components/recordings.less
+++ b/source/less/components/recordings.less
@@ -50,33 +50,8 @@
   align-items: center;
 }
 
-/*  .recordings__list {
-    list-style-type: none;
-    padding: 0 0 20px 0;
-
-    li {
-      background-size: 20px;
-      background-image: url('../../img/recorder@2x.png');
-      background-repeat: no-repeat;
-      height: 30px;
-      padding-left: 33px;
-      padding-top: 6px;
-      max-width: 260px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    a {
-      text-decoration: none;
-      color: @text-color;
-    }
-
-    .info-block {
-      background-color: @bg-color-yellow;
-      border-radius: 6px;
-      padding: 10px;
-      color: @bg-color-yellow--darker;
-    }
-  }*/
-/*}*/
+.recent-recording__title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
